<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_credential_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sk.eea.geo4jira.UserCredentialPage">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/user_credential_name"
        android:hint="@string/user_credential_name_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:id="@+id/user_credential_name_label"
        android:textSize="24sp"
        android:layout_alignBaseline="@+id/user_credential_name"
        android:layout_alignBottom="@+id/user_credential_name"
        android:layout_alignParentStart="true"
        android:text="@string/user_credential_name_label_text" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/user_credential_phone"
        android:layout_below="@+id/user_credential_address"
        android:layout_alignParentEnd="true"
        android:hint="@string/user_credential_phone_text" />

    <Button
        android:text="@string/user_credential_gotoapp_butn_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/user_credential_gotoapp_butn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/user_credential_surname"
        android:hint="@string/user_credential_surname_text"
        android:layout_below="@+id/user_credential_name"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/user_credential_address"
        android:hint="@string/user_credential_address_text"
        android:layout_below="@+id/user_credential_email"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/user_credential_email"
        android:hint="@string/user_credential_email_text"
        android:layout_below="@+id/user_credential_surname"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/user_credential_surname_label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_credential_surname_label"
        android:textSize="24sp"
        android:layout_alignBaseline="@+id/user_credential_surname"
        android:layout_alignBottom="@+id/user_credential_surname"
        android:layout_alignStart="@+id/user_credential_name_label" />

    <TextView
        android:text="@string/user_credential_email_label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_credential_email_label"
        android:textSize="24sp"
        android:layout_alignBaseline="@+id/user_credential_email"
        android:layout_alignBottom="@+id/user_credential_email"
        android:layout_alignStart="@+id/user_credential_surname_label" />

    <TextView
        android:text="@string/user_credential_phone_label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_credential_phone_label"
        android:textSize="24sp"
        android:layout_alignBaseline="@+id/user_credential_phone"
        android:layout_alignBottom="@+id/user_credential_phone"
        android:layout_alignStart="@+id/user_credential_address_label" />

    <TextView
        android:text="@string/user_credential_address_label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_credential_address_label"
        android:textSize="24sp"
        android:layout_alignBaseline="@+id/user_credential_address"
        android:layout_alignBottom="@+id/user_credential_address"
        android:layout_alignStart="@+id/user_credential_email_label" />
</RelativeLayout>
